modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Returns the number of frames in an Opus packet.
 *
 * Forwards to opus_packet_get_nb_frames.
 *
 * @param data the Opus packet bytes.
 * @param len  the packet length in bytes.
 * @return the frame count on success, or a negative libopus error code
 *         (COBALT_OPUS_BAD_ARG for a NULL packet or insufficient data,
 *         COBALT_OPUS_INVALID_PACKET for a malformed packet).
 */
int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len);
/**
 * Returns the number of samples per frame of an Opus packet at a sampling rate.
 *
 * Forwards to opus_packet_get_samples_per_frame.
 *
 * @param data the Opus packet bytes; at least one byte must be readable.
 * @param fs   the sampling rate in hertz; must be a multiple of 400 for an exact
 *             result.
 * @return the per-frame sample count.
 */
int32_t cobalt_opus_packet_get_samples_per_frame(const uint8_t *data, int32_t fs);
/**
 * Returns the coded bandwidth of an Opus packet.
 *
 * Forwards to opus_packet_get_bandwidth.
 *
 * @param data the Opus packet bytes.
 * @return one of the COBALT_OPUS_BANDWIDTH_* selectors on success, or
 *         COBALT_OPUS_INVALID_PACKET for a malformed packet.
 */
int32_t cobalt_opus_packet_get_bandwidth(const uint8_t *data);
/**
 * Returns the number of channels coded in an Opus packet.
 *
 * Forwards to opus_packet_get_nb_channels.
 *
 * @param data the Opus packet bytes.
 * @return the channel count on success, or COBALT_OPUS_INVALID_PACKET for a
 *         malformed packet.
 */
int32_t cobalt_opus_packet_get_nb_channels(const uint8_t *data);
/**
 * Reports whether an Opus packet carries an in-band forward-error-correction
 * (LBRR) copy of the previous frame.
 *
 * Forwards to opus_packet_has_lbrr, the direct primitive for the per-packet FEC
 * read; it inspects the TOC and per-SILK-frame LBRR flags.
 *
 * @param data the Opus packet bytes.
 * @param len  the packet length in bytes.
 * @return 1 if an LBRR copy is present, 0 if not, or COBALT_OPUS_INVALID_PACKET
 *         for a malformed packet.
 */
int32_t cobalt_opus_packet_has_lbrr(const uint8_t *data, int32_t len);
/**
 * Returns a textual description of a libopus error code.
 *
 * Forwards to opus_strerror. The returned pointer is static and must not be
 * freed.
 *
 * @param err a libopus error code, such as one returned by another
 *            cobalt_opus_* function.
 * @return a NUL-terminated, statically-allocated description.
 */
const char *cobalt_opus_strerror(int32_t err);
/**
 * Returns the libopus version string.
 *
 * Forwards to opus_get_version_string. The returned pointer is static and must
 * not be freed; the substring "-fixed" indicates a fixed-point build.
 *
 * @return a NUL-terminated, statically-allocated version string.
 */
const char *cobalt_opus_get_version_string(void);