modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_get_nb_frames$descriptor() {
        return cobalt_opus_packet_get_nb_frames.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len)
     * }
     */
    public static MethodHandle cobalt_opus_packet_get_nb_frames$handle() {
        return cobalt_opus_packet_get_nb_frames.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len)
     * }
     */
    public static MemorySegment cobalt_opus_packet_get_nb_frames$address() {
        return cobalt_opus_packet_get_nb_frames.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_frames(const uint8_t *data, int32_t len)
     * }
     */
    public static int cobalt_opus_packet_get_nb_frames(MemorySegment data, int len) {
        var mh$ = cobalt_opus_packet_get_nb_frames.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_get_nb_frames", data, len);
            }
            return (int)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_get_samples_per_frame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_get_samples_per_frame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_samples_per_frame(const uint8_t *data, int32_t fs)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_get_samples_per_frame$descriptor() {
        return cobalt_opus_packet_get_samples_per_frame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_samples_per_frame(const uint8_t *data, int32_t fs)
     * }
     */
    public static MethodHandle cobalt_opus_packet_get_samples_per_frame$handle() {
        return cobalt_opus_packet_get_samples_per_frame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_samples_per_frame(const uint8_t *data, int32_t fs)
     * }
     */
    public static MemorySegment cobalt_opus_packet_get_samples_per_frame$address() {
        return cobalt_opus_packet_get_samples_per_frame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_samples_per_frame(const uint8_t *data, int32_t fs)
     * }
     */
    public static int cobalt_opus_packet_get_samples_per_frame(MemorySegment data, int fs) {
        var mh$ = cobalt_opus_packet_get_samples_per_frame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_get_samples_per_frame", data, fs);
            }
            return (int)mh$.invokeExact(data, fs);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_get_bandwidth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_get_bandwidth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_bandwidth(const uint8_t *data)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_get_bandwidth$descriptor() {
        return cobalt_opus_packet_get_bandwidth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_bandwidth(const uint8_t *data)
     * }
     */
    public static MethodHandle cobalt_opus_packet_get_bandwidth$handle() {
        return cobalt_opus_packet_get_bandwidth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_bandwidth(const uint8_t *data)
     * }
     */
    public static MemorySegment cobalt_opus_packet_get_bandwidth$address() {
        return cobalt_opus_packet_get_bandwidth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_bandwidth(const uint8_t *data)
     * }
     */
    public static int cobalt_opus_packet_get_bandwidth(MemorySegment data) {
        var mh$ = cobalt_opus_packet_get_bandwidth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_get_bandwidth", data);
            }
            return (int)mh$.invokeExact(data);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_get_nb_channels {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_get_nb_channels");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_channels(const uint8_t *data)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_get_nb_channels$descriptor() {
        return cobalt_opus_packet_get_nb_channels.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_channels(const uint8_t *data)
     * }
     */
    public static MethodHandle cobalt_opus_packet_get_nb_channels$handle() {
        return cobalt_opus_packet_get_nb_channels.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_channels(const uint8_t *data)
     * }
     */
    public static MemorySegment cobalt_opus_packet_get_nb_channels$address() {
        return cobalt_opus_packet_get_nb_channels.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_get_nb_channels(const uint8_t *data)
     * }
     */
    public static int cobalt_opus_packet_get_nb_channels(MemorySegment data) {
        var mh$ = cobalt_opus_packet_get_nb_channels.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_get_nb_channels", data);
            }
            return (int)mh$.invokeExact(data);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_packet_has_lbrr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_packet_has_lbrr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_has_lbrr(const uint8_t *data, int32_t len)
     * }
     */
    public static FunctionDescriptor cobalt_opus_packet_has_lbrr$descriptor() {
        return cobalt_opus_packet_has_lbrr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_has_lbrr(const uint8_t *data, int32_t len)
     * }
     */
    public static MethodHandle cobalt_opus_packet_has_lbrr$handle() {
        return cobalt_opus_packet_has_lbrr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_has_lbrr(const uint8_t *data, int32_t len)
     * }
     */
    public static MemorySegment cobalt_opus_packet_has_lbrr$address() {
        return cobalt_opus_packet_has_lbrr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_packet_has_lbrr(const uint8_t *data, int32_t len)
     * }
     */
    public static int cobalt_opus_packet_has_lbrr(MemorySegment data, int len) {
        var mh$ = cobalt_opus_packet_has_lbrr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_packet_has_lbrr", data, len);
            }
            return (int)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_strerror {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_strerror");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *cobalt_opus_strerror(int32_t err)
     * }
     */
    public static FunctionDescriptor cobalt_opus_strerror$descriptor() {
        return cobalt_opus_strerror.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *cobalt_opus_strerror(int32_t err)
     * }
     */
    public static MethodHandle cobalt_opus_strerror$handle() {
        return cobalt_opus_strerror.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *cobalt_opus_strerror(int32_t err)
     * }
     */
    public static MemorySegment cobalt_opus_strerror$address() {
        return cobalt_opus_strerror.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *cobalt_opus_strerror(int32_t err)
     * }
     */
    public static MemorySegment cobalt_opus_strerror(int err) {
        var mh$ = cobalt_opus_strerror.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_strerror", err);
            }
            return (MemorySegment)mh$.invokeExact(err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_get_version_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_POINTER    );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_get_version_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *cobalt_opus_get_version_string()
     * }
     */
    public static FunctionDescriptor cobalt_opus_get_version_string$descriptor() {
        return cobalt_opus_get_version_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *cobalt_opus_get_version_string()
     * }
     */
    public static MethodHandle cobalt_opus_get_version_string$handle() {
        return cobalt_opus_get_version_string.HANDLE;
    }
